--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <script src="tip cal.js"></script>
     <script>
-        if ("ServiceWorker" in navigator) {
+        if ("serviceWorker" in navigator) {
             window.addEventListener("load", () => {
                 navigator.serviceWorker.register('service-worker.js').then((reg) => {
                     console.log("service worker register at: ", reg.scope)
